--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "next": "15.0.2",
+    "@prisma/client": "^5.21.1",
+    "@tanstack/react-query": "^5.59.16",
+    "prisma": "^5.21.1",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "typescript": "^5",
